--- a/src/css/Assignments.css
+++ b/src/css/Assignments.css
@@ -1,3 +1,5 @@
 .assignments {
-    background-color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15pt;
+    padding-left: 5pt;
 }
