--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,4 +1,10 @@
 .footer {
-    background-color: rgb(75, 4, 4);
+    background-color: white;
     color: burlywood;
+    align-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    align-content: center;
+    font-size: 10pt;
+    padding-left: 5pt;
+    
 }
