--- a/src/css/App.css
+++ b/src/css/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.searchbar {
+  max-height: 100px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
