--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,8 +1,11 @@
 @media all and (min-width: 480px) {
     .Login {
-      padding: 60px 0;
+      padding-bottom: 100%;
       align-content: center;
       text-align: center;
+      background-color:rgb(181, 221, 235);
+      background-size: inherit;
+      size: inherit;
     }
   
     .Login form {
